# open-source-face-sdk

./: README.md
docs/: getting_started.md  user_manual.md
face_sdk/: CMakeLists.txt  README.md
face_sdk/include/api/: Context.h  Exception.h  ProcessingBlock.h  Service.h  c_api.h
face_sdk/include/tdv/data/: Context.h  ContextUtils.h  JSONSerializer.h
face_sdk/include/tdv/modules/: FaceIdentificationModule.h  MatcherModule.h  MeshFitterModule.h  ONNXModule.h  ONNXRuntimeAdapter.h  ONNXRuntimeEnvironment.h  ProcessingBlock.h
face_sdk/include/tdv/modules/DetectionModules/: BaseDetectionModule.h
face_sdk/include/tdv/utils/rassert/: RAssert.h
face_sdk/include/tdv/utils/recognizer_utils/: RecognizerUtils.h
face_sdk/samples/: CMakeLists.txt
face_sdk/samples/cpp/: CMakeLists.txt
face_sdk/samples/cpp/face_demo/: CMakeLists.txt  main.cpp
face_sdk/samples/python/: face_demo.py
face_sdk/scripts/linux_x86_64/: BUILD_LINUX_X86_64.md  build_sdk.sh
face_sdk/scripts/windows/: make_project.bat  make_project.ps1
face_sdk/src/api/: c_api.cpp
face_sdk/src/python_api/: setup.py
face_sdk/src/python_api/face_sdk/: __init__.py
face_sdk/src/python_api/face_sdk/modules/: context.py  dll_handle.py  error.py  exception_check.py  processing_block.py  service.py
face_sdk/src/tdv/data/: ContextUtils.cpp  JSONSerializer.cpp
face_sdk/src/tdv/modules/: FaceIdentificationModule.cpp  MatcherModule.cpp  MeshFitterModule.cpp  ONNXRuntimeAdapter.cpp  ONNXRuntimeEnvironment.cpp
face_sdk/src/tdv/modules/DetectionModules/: FaceDetectionModule.cpp
face_sdk/src/tdv/utils/recognizer_utils/: RecognizerUtils.cpp
open_midas/: README.md  requirements.txt
open_midas/bn_extraction/: utils.py
open_midas/bn_extraction/models/: __init__.py  kld_extractor.py  var_mv_extractor.py
open_midas/bn_finetune/: training_helpers.py  visualisation_example.ipynb  visualisation_utils.py
open_midas/dataset_filtering/: dataset.py  example.ipynb  face_dataset_filtering.py  visualizations.py
open_midas/feature_analysis/: augmentations.py  example.ipynb  q75.npy  utils.py
open_midas/qaa/: eval_ijbc.py  example.ipynb  train_qaa.py  utils_ijbc.py
open_midas/qaa/models/: __init__.py  qe_pipeline.py
open_midas/recognition/models/: iresnet.py  iresnet_custom.py
sdk/: CMakeLists.txt  README.md
sdk/include/api/: Context.h  ProcessingBlock.h  Service.h  c_api.h
sdk/include/tdv/data/: Context.h  ContextUtils.h
sdk/include/tdv/inference/: AgeEstimationInference.h  BaseEstimationInference.h  EmotionsEstimationInference.h  GenderEstimationInference.h  GlassesEstimationInference.h  MaskEstimationInference.h  MeshFitterInference.h
sdk/include/tdv/modules/: AgeEstimationModule.h  BaseEstimationModule.h  BodyReidentificationModule.h  EmotionsEstimationModule.h  EyeOpenessEstimationModule.h  FaceIdentificationModule.h  FitterModule.h  GenderEstimationModule.h  GlassesEstimationModule.h  HpeResnetV1DModule.h  MaskEstimationModule.h  ONNXModule.h  ONNXRuntimeAdapter.h  ONNXRuntimeEnvironment.h  ProcessingBlock.h
sdk/include/tdv/modules/DetectionModules/: BaseDetectionModule.h  BodyDetectionModule.h  FaceDetectionModule.h
sdk/include/tdv/modules/LivenessDetectionModule/: LivenessBaseModule.h  LivenessDetectionModule.h
sdk/include/tdv/utils/recognizer_utils/: RecognizerUtils.h
sdk/samples/cpp/: CMakeLists.txt
sdk/samples/cpp/body_demo/: CMakeLists.txt  main.cpp
sdk/samples/cpp/estimator_demo/: CMakeLists.txt  main.cpp
sdk/samples/cpp/face_demo/: CMakeLists.txt  main.cpp
sdk/samples/csharp/csharp_body_demo/: Program.cs
sdk/samples/csharp/csharp_estimator_demo/: ConsoleOptions.cs  Program.cs
sdk/samples/csharp/csharp_face_demo/: ConsoleOptions.cs  Program.cs
sdk/samples/java/com/face_detector_demo/: face_detector_demo.java
sdk/samples/python/: body_demo.py  estimator_demo.py  face_demo.py
sdk/scripts/linux_x86_64/: BUILD_CSHARP_LINUX_X86_64.md  BUILD_LINUX_X86_64.md  build_sdk.sh  create_csharp_demo.sh
sdk/scripts/windows/: BUILD_CSHARP_WINDOWS.md  BUILD_WINDOWS.md  create_csharp_demo.bat  make_project.bat  make_project.ps1
sdk/src/: CMakeLists.txt
sdk/src/api/: c_api.cpp
sdk/src/csharp_api/: ComplexObject.cs  Context.cs  Error.cs  ErrorMethods.cs  ExceptionDestroyer.cs  ProcessingBlock.cs  service.cs
sdk/src/java_api/: CMakeLists.txt
sdk/src/java_api/jni/: Context_jni.cpp  Context_jni.h  ProcessingBlock_jni.cpp  ProcessingBlock_jni.h  Service_jni.cpp  Service_jni.h  jni_glob.h
sdk/src/java_api/src/com/face_sdk/: Context.java  ProcessingBlock.java  Service.java
sdk/src/javascript_api/: face_detection.html
sdk/src/python_api/: setup.py
sdk/src/python_api/face_sdk/modules/: context.py  dll_handle.py  models.py  processing_block.py  service.py
sdk/src/tdv/data/: ContextUtils.cpp  JSONSerializer.cpp
sdk/src/tdv/modules/: AgeEstimationModule.cpp  BaseEstimationModule.cpp  BodyReidentificationModule.cpp  EmotionsEstimationModule.cpp  EyeOpenessEstimationModule.cpp  FaceIdentificationModule.cpp  FitterModule.cpp  GenderEstimationModule.cpp  GlassesEstimationModule.cpp  HpeResnetV1DModule.cpp  MaskEstimationModule.cpp  MatcherModule.cpp  ONNXRuntimeAdapter.cpp  ONNXRuntimeEnvironment.cpp  ProcessingBlock.cpp
sdk/src/tdv/modules/DetectionModules/: BodyDetectionModule.cpp
sdk/src/tdv/modules/LivenessDetectionModule/: LivenessBaseModule.cpp  LivenessDetectionModule.cpp
sdk/src/tdv/utils/har_utils/: har_utils.cpp  har_utils.h
sdk/src/tdv/utils/recognizer_utils/: RecognizerUtils.cpp
